<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_location_label">Location</string>
    <string name="crime_location_none">No location recorded</string>
    <string name="crime_location_format">Lat: %1$.6f, Lon: %2$.6f</string>
    <string name="crime_location_button">Get Location</string>
    <string name="crime_map_button">Show on Map</string>
    <string name="location_permission_denied">Location permission is needed to record where the crime happened.</string>
    <string name="location_unavailable">Couldn\'t get a location. On the emulator, set one in Extended Controls → Location.</string>
    <string name="play_services_unavailable">Google Play services isn\'t available on this device.</string>
    <string name="title_activity_maps">Crime Location</string>
    <string name="crime_map_default_title">Crime scene</string>
</resources>